# bcgx-spanishgas-g1

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.MD  Dockerfile  Dockerfile.lambda  Dockerfile.processing  Dockerfile.streamlit  Dockerfile.train  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  retrain.yml
artifacts/monitoring/: data_drift_run_date=2026-02-09.json  data_drift_run_date=2026-02-09.md  model_perf.md  model_perf_metrics.json
artifacts/reports/: offer_simulation.md  (+2 more)
configs/: column_registry.yaml  feature_tiers.yaml  model_baseline.yaml  model_gbdt.yaml  monitoring.yaml  pipeline.yaml  reco_sim.yaml  settings.py  training_set.yaml
docs/: ARCHITECTURE.md  BRD.md  DATA_DICTIONARY.md  RECOMMENDATION_POLICY.md  TICKETS.md  architecture_diagram.py
notebooks/: 01_data_layers_and_gold.ipynb  02_modeling.ipynb  csv_to_parquet.ipynb
src/: __init__.py
tests/: test_alerts.py  test_api_main.py  test_artifacts.py  test_batch_score.py  test_build_features.py  test_build_training_set.py  test_churn_baseline.py  test_churn_gbdt.py  test_contracts.py  test_data_drift.py  test_data_quality.py  test_drift.py  test_imports.py  test_ingest.py  test_lambda_handler.py  test_manifest.py  test_model_perf.py  test_models.py  test_nlp.py  test_pipeline_e2e.py  test_reco.py  test_reco_recommend.py  test_reco_schema.py  test_reco_simulate.py  test_run_pipeline.py  test_s3_io.py  test_segmentation.py  test_settings.py  test_silver.py  test_streamlit_data_loader.py  test_streamlit_pages.py  test_ui_app.py
(+91 files in other folders)
